--- a/pipeline.py.yaml
+++ b/pipeline.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-01-18T11:32:35.765524',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-01-18T13:15:22.395232',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
@@ -56,8 +56,8 @@ spec:
   - name: reconstruction
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
-          $PWD/hgAHCal-ECal &&                                 chmod +x ./runRec.sh
-          && ./runRec.sh "$0"', '{{inputs.parameters.simulation-lcio}}']
+          $PWD/hgAHCal-ECal &&  ls -ltrh &&                                chmod +x
+          ./runRec.sh && ./runRec.sh "$0"', '{{inputs.parameters.simulation-lcio}}']
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -77,7 +77,7 @@ spec:
   - name: simulation
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
-          $PWD/hgAHCal-ECal && chmod +x ./runSim.sh && ./runSim.sh &&                                 ls
+          $PWD/hgAHCal-ECal && ls -ltrh && chmod +x ./runSim.sh && ./runSim.sh &&                                 ls
           -ltrh /mnt']
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
