--- a/pipeline.py.yaml
+++ b/pipeline.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-01-18T13:15:22.395232',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-01-18T13:30:25.640063',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
@@ -77,8 +77,7 @@ spec:
   - name: simulation
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
-          $PWD/hgAHCal-ECal && ls -ltrh && chmod +x ./runSim.sh && ./runSim.sh &&                                 ls
-          -ltrh /mnt']
+          $PWD/hgAHCal-ECal && chmod +x ./runSim.sh && ./runSim.sh']
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
