--- a/pipeline.py.yaml
+++ b/pipeline.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-01-18T13:59:42.862914',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-01-18T14:59:20.203033',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
@@ -13,13 +13,6 @@ spec:
     dag:
       tasks:
       - {name: persistent-volume, template: persistent-volume}
-      - name: reconstruction
-        template: reconstruction
-        dependencies: [persistent-volume, simulation]
-        arguments:
-          parameters:
-          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
-          - {name: simulation-lcio, value: '{{tasks.simulation.outputs.parameters.simulation-lcio}}'}
       - name: simulation
         template: simulation
         dependencies: [persistent-volume]
@@ -53,31 +46,11 @@ spec:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
         pipelines.kubeflow.org/pipeline-sdk-type: kfp
         pipelines.kubeflow.org/enable_caching: "true"
-  - name: reconstruction
-    container:
-      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
-          $PWD/hgAHCal-ECal && pwd &&                                 chmod +x ./runRec.sh
-          && ./runRec.sh "$0"', '{{inputs.parameters.simulation-lcio}}']
-      command: [/bin/bash, -c]
-      image: ilcsoft/ilcsoft-spack:latest
-      volumeMounts:
-      - {mountPath: /mnt, name: persistent-volume}
-    inputs:
-      parameters:
-      - {name: persistent-volume-name}
-      - {name: simulation-lcio}
-    metadata:
-      labels:
-        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
-        pipelines.kubeflow.org/pipeline-sdk-type: kfp
-        pipelines.kubeflow.org/enable_caching: "true"
-    volumes:
-    - name: persistent-volume
-      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
   - name: simulation
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
-          $PWD/hgAHCal-ECal && chmod +x ./runSim.sh && ./runSim.sh']
+          $PWD/hgAHCal-ECal && chmod +x ./runSim.sh && ./runSim.sh "$0" "$1" ', '1',
+        test_001]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -86,12 +59,9 @@ spec:
       parameters:
       - {name: persistent-volume-name}
     outputs:
-      parameters:
-      - name: simulation-lcio
-        valueFrom: {path: /mnt/lcio_path}
       artifacts:
-      - {name: simulation-lcio, path: /mnt/lcio_path}
-      - {name: simulation-root, path: /mnt/root_path}
+      - {name: simulation-data, path: /mnt/run_test_001/pion_shower_1.slcio}
+      - {name: simulation-lcio_path, path: /mnt/lcio_path}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
