--- a/nestedGAN_pipeline.py.yaml
+++ b/nestedGAN_pipeline.py.yaml
@@ -2,16 +2,53 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-nestedgan-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-02-01T14:15:56.948750',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-02-02T11:27:10.517472',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen_NestedGAN"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
 spec:
   entrypoint: ildeventgen-nestedgan
   templates:
+  - name: control-plots
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env && mkdir -p /mnt/plots
+          &&                                 git clone https://github.com/EnginEren/hgAHCal-ECal.git
+          && cd $PWD/hgAHCal-ECal &&                                 python control.py
+          --lcio "$0" --nEvents 20 &&                                 cd /mnt/plots/
+          && touch pion_plots.tar.gz &&                                 tar --exclude=pion_plots.tar.gz
+          -zcvf pion_plots.tar.gz .', /tmp/inputs/input-0/data]
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+      volumeMounts:
+      - {mountPath: /mnt, name: persistent-volume}
+    inputs:
+      parameters:
+      - {name: persistent-volume-name}
+      artifacts:
+      - {name: reconstruction-data, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: control-plots-data, path: /mnt/plots/pion_plots.tar.gz}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+    volumes:
+    - name: persistent-volume
+      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
   - name: ildeventgen-nestedgan
     dag:
       tasks:
+      - name: control-plots
+        template: control-plots
+        dependencies: [persistent-volume, reconstruction]
+        arguments:
+          parameters:
+          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
+          artifacts:
+          - {name: reconstruction-data, from: '{{tasks.reconstruction.outputs.artifacts.reconstruction-data}}'}
       - {name: persistent-volume, template: persistent-volume}
       - name: reconstruction
         template: reconstruction
@@ -58,7 +95,7 @@ spec:
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
           $PWD/hgAHCal-ECal && pwd &&                                 chmod +x ./runRec.sh
-          && ./runRec.sh "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', testN01]
+          && ./runRec.sh "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', testN100]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -70,7 +107,7 @@ spec:
       - {name: simulation-data, path: /tmp/inputs/input-0/data}
     outputs:
       artifacts:
-      - {name: reconstruction-data, path: /mnt/run_testN01/pion-shower_1_REC.slcio}
+      - {name: reconstruction-data, path: /mnt/run_testN100/pion-shower_1_REC.slcio}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
@@ -83,7 +120,7 @@ spec:
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
           $PWD/hgAHCal-ECal && chmod +x ./runSimNested.sh && ./runSimNested.sh "$0"
-          "$1" ', '1', testN01]
+          "$1" ', '1', testN100]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -93,7 +130,7 @@ spec:
       - {name: persistent-volume-name}
     outputs:
       artifacts:
-      - {name: simulation-data, path: /mnt/run_testN01/pion-shower_1.slcio}
+      - {name: simulation-data, path: /mnt/run_testN100/pion-shower_1.slcio}
       - {name: simulation-lcio_path, path: /mnt/lcio_path}
     metadata:
       labels:
