--- a/nestedGAN_pipeline.py.yaml
+++ b/nestedGAN_pipeline.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-nestedgan-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-02-07T15:40:20.735362',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-01T12:59:22.301254',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen_NestedGAN"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
@@ -27,8 +27,8 @@ spec:
       parameters:
       - {name: persistent-volume-name}
       artifacts:
-      - {name: reconstruction-data, path: /tmp/inputs/input-0/data}
-      - {name: hdf5-conversion-data, path: /tmp/inputs/input-1/data}
+      - {name: reconstruction-3-data, path: /tmp/inputs/input-0/data}
+      - {name: hdf5-conversion-3-data, path: /tmp/inputs/input-1/data}
     outputs:
       artifacts:
       - {name: control-plots-data, path: /mnt/plots/pion_plots.tar.gz}
@@ -46,7 +46,7 @@ spec:
           init bash; source /root/.bashrc; conda activate root_env &&                                 git
           clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal                                  &&
           python create_hdf5.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
-          100', /tmp/inputs/input-0/data, testN100, '1']
+          100', /tmp/inputs/input-0/data, prod, '1']
       command: [/bin/bash, -c]
       image: ilcsoft/py3lcio:lcio-16
       volumeMounts:
@@ -58,7 +58,63 @@ spec:
       - {name: reconstruction-data, path: /tmp/inputs/input-0/data}
     outputs:
       artifacts:
-      - {name: hdf5-conversion-data, path: /mnt/run_testN100/pion-shower_1.hdf5}
+      - {name: hdf5-conversion-data, path: /mnt/run_prod/pion-shower_1.hdf5}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - name: persistent-volume
+      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
+  - name: hdf5-conversion-2
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal                                  &&
+          python create_hdf5.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
+          100', /tmp/inputs/input-0/data, prod, '2']
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+      volumeMounts:
+      - {mountPath: /mnt, name: persistent-volume}
+    inputs:
+      parameters:
+      - {name: persistent-volume-name}
+      artifacts:
+      - {name: reconstruction-2-data, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: hdf5-conversion-2-data, path: /mnt/run_prod/pion-shower_2.hdf5}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - name: persistent-volume
+      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
+  - name: hdf5-conversion-3
+    container:
+      args: ['cd LCIO; source setup.sh; cd .. &&                                 conda
+          init bash; source /root/.bashrc; conda activate root_env &&                                 git
+          clone https://github.com/EnginEren/hgAHCal-ECal.git && cd $PWD/hgAHCal-ECal                                  &&
+          python create_hdf5.py --lcio "$0" --outputR "$1" --outputP "$2" --nEvents
+          100', /tmp/inputs/input-0/data, prod, '3']
+      command: [/bin/bash, -c]
+      image: ilcsoft/py3lcio:lcio-16
+      volumeMounts:
+      - {mountPath: /mnt, name: persistent-volume}
+    inputs:
+      parameters:
+      - {name: persistent-volume-name}
+      artifacts:
+      - {name: reconstruction-3-data, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: hdf5-conversion-3-data, path: /mnt/run_prod/pion-shower_3.hdf5}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
@@ -73,13 +129,13 @@ spec:
       tasks:
       - name: control-plots
         template: control-plots
-        dependencies: [hdf5-conversion, persistent-volume, reconstruction]
+        dependencies: [hdf5-conversion-3, persistent-volume, reconstruction-3]
         arguments:
           parameters:
           - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
           artifacts:
-          - {name: hdf5-conversion-data, from: '{{tasks.hdf5-conversion.outputs.artifacts.hdf5-conversion-data}}'}
-          - {name: reconstruction-data, from: '{{tasks.reconstruction.outputs.artifacts.reconstruction-data}}'}
+          - {name: hdf5-conversion-3-data, from: '{{tasks.hdf5-conversion-3.outputs.artifacts.hdf5-conversion-3-data}}'}
+          - {name: reconstruction-3-data, from: '{{tasks.reconstruction-3.outputs.artifacts.reconstruction-3-data}}'}
       - name: hdf5-conversion
         template: hdf5-conversion
         dependencies: [persistent-volume, reconstruction]
@@ -88,6 +144,22 @@ spec:
           - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
           artifacts:
           - {name: reconstruction-data, from: '{{tasks.reconstruction.outputs.artifacts.reconstruction-data}}'}
+      - name: hdf5-conversion-2
+        template: hdf5-conversion-2
+        dependencies: [persistent-volume, reconstruction-2]
+        arguments:
+          parameters:
+          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
+          artifacts:
+          - {name: reconstruction-2-data, from: '{{tasks.reconstruction-2.outputs.artifacts.reconstruction-2-data}}'}
+      - name: hdf5-conversion-3
+        template: hdf5-conversion-3
+        dependencies: [persistent-volume, reconstruction-3]
+        arguments:
+          parameters:
+          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
+          artifacts:
+          - {name: reconstruction-3-data, from: '{{tasks.reconstruction-3.outputs.artifacts.reconstruction-3-data}}'}
       - {name: persistent-volume, template: persistent-volume}
       - name: reconstruction
         template: reconstruction
@@ -97,8 +169,36 @@ spec:
           - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
           artifacts:
           - {name: simulation-data, from: '{{tasks.simulation.outputs.artifacts.simulation-data}}'}
+      - name: reconstruction-2
+        template: reconstruction-2
+        dependencies: [persistent-volume, simulation-2]
+        arguments:
+          parameters:
+          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
+          artifacts:
+          - {name: simulation-2-data, from: '{{tasks.simulation-2.outputs.artifacts.simulation-2-data}}'}
+      - name: reconstruction-3
+        template: reconstruction-3
+        dependencies: [persistent-volume, simulation-3]
+        arguments:
+          parameters:
+          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
+          artifacts:
+          - {name: simulation-3-data, from: '{{tasks.simulation-3.outputs.artifacts.simulation-3-data}}'}
       - name: simulation
         template: simulation
+        dependencies: [persistent-volume]
+        arguments:
+          parameters:
+          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
+      - name: simulation-2
+        template: simulation-2
+        dependencies: [persistent-volume]
+        arguments:
+          parameters:
+          - {name: persistent-volume-name, value: '{{tasks.persistent-volume.outputs.parameters.persistent-volume-name}}'}
+      - name: simulation-3
+        template: simulation-3
         dependencies: [persistent-volume]
         arguments:
           parameters:
@@ -134,7 +234,7 @@ spec:
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
           $PWD/hgAHCal-ECal && pwd &&                                 chmod +x ./runRec.sh
-          && ./runRec.sh "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', testN100]
+          && ./runRec.sh "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '1', prod]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -146,7 +246,57 @@ spec:
       - {name: simulation-data, path: /tmp/inputs/input-0/data}
     outputs:
       artifacts:
-      - {name: reconstruction-data, path: /mnt/run_testN100/pion-shower_1_REC.slcio}
+      - {name: reconstruction-data, path: /mnt/run_prod/pion-shower_1_REC.slcio}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+    volumes:
+    - name: persistent-volume
+      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
+  - name: reconstruction-2
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
+          $PWD/hgAHCal-ECal && pwd &&                                 chmod +x ./runRec.sh
+          && ./runRec.sh "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '2', prod]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /mnt, name: persistent-volume}
+    inputs:
+      parameters:
+      - {name: persistent-volume-name}
+      artifacts:
+      - {name: simulation-2-data, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: reconstruction-2-data, path: /mnt/run_prod/pion-shower_2_REC.slcio}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+    volumes:
+    - name: persistent-volume
+      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
+  - name: reconstruction-3
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git &&                                 cd
+          $PWD/hgAHCal-ECal && pwd &&                                 chmod +x ./runRec.sh
+          && ./runRec.sh "$0" "$1" "$2" ', /tmp/inputs/input-0/data, '3', prod]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /mnt, name: persistent-volume}
+    inputs:
+      parameters:
+      - {name: persistent-volume-name}
+      artifacts:
+      - {name: simulation-3-data, path: /tmp/inputs/input-0/data}
+    outputs:
+      artifacts:
+      - {name: reconstruction-3-data, path: /mnt/run_prod/pion-shower_3_REC.slcio}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
@@ -159,7 +309,7 @@ spec:
     container:
       args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
           $PWD/hgAHCal-ECal && chmod +x ./runSimNested.sh && ./runSimNested.sh "$0"
-          "$1" ', '1', testN100]
+          "$1" ', '1', prod]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -169,8 +319,58 @@ spec:
       - {name: persistent-volume-name}
     outputs:
       artifacts:
-      - {name: simulation-data, path: /mnt/run_testN100/pion-shower_1.slcio}
+      - {name: simulation-data, path: /mnt/run_prod/pion-shower_1.slcio}
       - {name: simulation-lcio_path, path: /mnt/lcio_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - name: persistent-volume
+      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
+  - name: simulation-2
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
+          $PWD/hgAHCal-ECal && chmod +x ./runSimNested.sh && ./runSimNested.sh "$0"
+          "$1" ', '2', prod]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /mnt, name: persistent-volume}
+    inputs:
+      parameters:
+      - {name: persistent-volume-name}
+    outputs:
+      artifacts:
+      - {name: simulation-2-data, path: /mnt/run_prod/pion-shower_2.slcio}
+      - {name: simulation-2-lcio_path, path: /mnt/lcio_path}
+    metadata:
+      labels:
+        pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
+        pipelines.kubeflow.org/pipeline-sdk-type: kfp
+        pipelines.kubeflow.org/enable_caching: "true"
+      annotations: {pipelines.kubeflow.org/max_cache_staleness: P0D}
+    volumes:
+    - name: persistent-volume
+      persistentVolumeClaim: {claimName: '{{inputs.parameters.persistent-volume-name}}'}
+  - name: simulation-3
+    container:
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
+          $PWD/hgAHCal-ECal && chmod +x ./runSimNested.sh && ./runSimNested.sh "$0"
+          "$1" ', '3', prod]
+      command: [/bin/bash, -c]
+      image: ilcsoft/ilcsoft-spack:latest
+      volumeMounts:
+      - {mountPath: /mnt, name: persistent-volume}
+    inputs:
+      parameters:
+      - {name: persistent-volume-name}
+    outputs:
+      artifacts:
+      - {name: simulation-3-data, path: /mnt/run_prod/pion-shower_3.slcio}
+      - {name: simulation-3-lcio_path, path: /mnt/lcio_path}
     metadata:
       labels:
         pipelines.kubeflow.org/kfp_sdk_version: 1.8.9
