--- a/nestedGAN_pipelineEOS.py.yaml
+++ b/nestedGAN_pipelineEOS.py.yaml
@@ -2,7 +2,7 @@ apiVersion: argoproj.io/v1alpha1
 kind: Workflow
 metadata:
   generateName: ildeventgen-nestedgan-
-  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-02T13:25:11.039147',
+  annotations: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9, pipelines.kubeflow.org/pipeline_compilation_time: '2022-03-02T14:25:07.766739',
     pipelines.kubeflow.org/pipeline_spec: '{"description": "Event Simulation and Reconstruction",
       "name": "ILDEventGen_NestedGAN"}'}
   labels: {pipelines.kubeflow.org/kfp_sdk_version: 1.8.9}
@@ -17,9 +17,11 @@ spec:
       - {name: simulation-3, template: simulation-3}
   - name: simulation
     container:
-      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
-          $PWD/hgAHCal-ECal && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh
-          "$0" "$1" ', '1', prodEOS]
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
+          /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
+          600 /tmp/krb5cc_0 &&                                 ls -l /eos/user/e/eneren
+          &&                                 cd $PWD/hgAHCal-ECal && chmod +x ./runSimNestedEOS.sh
+          && ./runSimNestedEOS.sh "$0" "$1" ', '1', prodEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -38,9 +40,11 @@ spec:
       secret: {secretName: krb-secret}
   - name: simulation-2
     container:
-      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
-          $PWD/hgAHCal-ECal && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh
-          "$0" "$1" ', '2', prodEOS]
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
+          /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
+          600 /tmp/krb5cc_0 &&                                 ls -l /eos/user/e/eneren
+          &&                                 cd $PWD/hgAHCal-ECal && chmod +x ./runSimNestedEOS.sh
+          && ./runSimNestedEOS.sh "$0" "$1" ', '2', prodEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
@@ -59,9 +63,11 @@ spec:
       secret: {secretName: krb-secret}
   - name: simulation-3
     container:
-      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git  &&                                 cd
-          $PWD/hgAHCal-ECal && chmod +x ./runSimNestedEOS.sh && ./runSimNestedEOS.sh
-          "$0" "$1" ', '3', prodEOS]
+      args: ['git clone https://github.com/EnginEren/hgAHCal-ECal.git && whoami &&                                 cp
+          /secret/krb-secret-vol/krb5cc_1000 /tmp/krb5cc_0 &&                                 chmod
+          600 /tmp/krb5cc_0 &&                                 ls -l /eos/user/e/eneren
+          &&                                 cd $PWD/hgAHCal-ECal && chmod +x ./runSimNestedEOS.sh
+          && ./runSimNestedEOS.sh "$0" "$1" ', '3', prodEOS]
       command: [/bin/bash, -c]
       image: ilcsoft/ilcsoft-spack:latest
       volumeMounts:
